<resources>
    <string name="app_name">ChatApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications_admin_channel_name">admin_channel_name</string>
    <string name="notifications_admin_channel_description">admin_description</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login_to_your_account">login to your account</string>
    <string name="login">login</string>
    <string name="status">status</string>
    <string name="display_name">Display Name</string>
    <string name="total_friends">total friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="name">Name</string>
    <string name="create_account">create account</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="welcome_to_chatapp">Welcome to ChatApp</string>
    <string name="your_status">Your status</string>
    <string name="save_changes">Save Changes</string>
    <string name="last_seen">last seen</string>
    <string name="message_text">message text</string>
    <string name="user_default_status">user default status</string>
    <string name="_00_00">00:00</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="send_media_button">send media button</string>
    <string name="send_message_button">send message button</string>
    <string name="profile_image_view">profile image view</string>
    <string name="widget_profile_image">widget profile image</string>
    <string name="message_image_background">message image background</string>
    <string name="online_offline_indication">online offline indication</string>
    <string name="enter_a_message">Enter a message ...</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="log_out">log Out</string>
    <string name="online">online</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="unfriend_person">Unfriend this person</string>
    <string name="please_wait">Please Wait While loading ..</string>
    <string name="please_wait_creating">please wait while creating user ..</string>
    <string name="please_wait_save">please wait while we save changes</string>
    <string name="latest_chats">Latest Chats</string>

    <string name="colon">:</string>
    <string name="logo_photo">logo photo</string>
</resources>
