<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282a2d"
    tools:context="com.companyname.chatapp.chatapp.Activities.ProfileActivity">

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_person_black_24dp" />
    <TextView
        android:id="@+id/profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="236dp"
        tools:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        tools:text="@string/status"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/profile_total_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_send_request_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        tools:text="@string/total_friends"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

    <Button
        android:id="@+id/profile_send_request_button"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_decline"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profile_decline"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/profile_send_request_button"
        android:layout_marginBottom="15dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/white"
        android:enabled="false"
        android:visibility="invisible"/>

</RelativeLayout>
