<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.companyname.chatapp.chatapp.Activities.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_to_chatapp"
        android:textSize="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="5dp"
        android:background="@color/colorAccent"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:layout_gravity="center"/>
</LinearLayout>
